<resources>
    <string name="app_name">CongThucNauAn</string>


    <string name="nav_Home">Trang chủ</string>
    <string name="nav_TaoCongThuc">Tạo mới</string>
    <string name="nav_MonAn">Món ăn</string>
    <string name="nav_TimKiem">Tìm kiếm</string>
    <string name="nav_taikhoan">Tài Khoản</string>

    <string name="matkhau">Mật Khẩu</string>
    <string name="hovaten">Họ Và Tên</string>
    <string name="sdt">SDT</string>
    <string name="email">Email</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="TaoCongThucMoi">Tạo công thức mới</string>
    <string name="Obligatory">*</string>
    <string name="TenMonAn">Tên món ăn</string>
    <string name="AnhDaiDien">Ảnh đại diện</string>
    <string name="TiepTuc">tiếp tục</string>
    <string name="DoKho">Độ khó</string>
    <string name="De">Dễ</string>
    <string name="TrungBinh">Trung bình</string>
    <string name="Kho">Khó</string>
    <string name="ThoiGianNau">Thời gian nấu</string>
    <string name="NguyenLieu">Nguyên liệu</string>
    <string name="hint_ThoiGianNau">vd: 15 phút</string>
    <string name="Huy">Hủy</string>
    <string name="ThemBuocMoi">Thêm bước mới</string>
    <string name="HinhAnh">Hình ảnh</string>
    <string name="MoTa">Mô tả</string>
    <string name="Luu">Lưu</string>
    <string name="LoaiMonAn">Loại món ăn</string>
    <string name="GioiThieuMonAn">Giới thiệu món ăn</string>
    <string name="HoanThanh">Hoàn thành</string>
    <string name="TaoCongThucThanhCong">TẠO MỚI THÀNH CÔNG</string>
    <string name="message_Success">Công thức của bạn sẽ được duyệt trong vòng 24 giờ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DangKy">Đăng Ký</string>
    <string name="ChiaSe">Chia sẻ</string>
    <string name="lbl_set_profile_photo">Chọn</string>
    <string name="lbl_take_camera_picture">Camera</string>
    <string name="lbl_choose_from_gallery">Thư viện ảnh</string>
    <string name="mon_cua_toi">Món của tôi</string>
    <string name="da_thich">Đã thích</string>
    <string name="username_tk">Username</string>
    <string name="mat_khau_tk">Mật Khẩu</string>
    <string name="dang_xuat_tk">Đăng Xuất</string>
    <string name="txt_mat_khau_tk">Mật khẩu</string>
    <string name="thong_tin_ca_nhan">Thông tinh cá nhân</string>
    <string name="ten_tk">Tên</string>
    <string name="so_dien_thoai_tk">Số Điện Thoại</string>
    <string name="txt_ten_tk">Tên</string>
    <string name="txt_sodienthoai_tk">Số điện thoại</string>
    <string name="txt_email_tk">email</string>
    <string name="ten_mon_an_tk">Tên món ăn</string>
    <string name="luot_xem_tk">5000</string>
    <string name="thoi_gian_tk">15 phút</string>
    <string name="luot_thich_tk">3000</string>
    <string name="ten_nguoi_tao_tk">Tên người tạo</string>
    <string name="thoi_gian_nau_tk">150 phút</string>
</resources>