<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaoCongThuc_Buoc_2_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue_primary_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/TaoCongThucMoi"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="backPreviousActivity"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/ic_baseline_back_white" />

        <TextView
            android:id="@+id/cancelCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/Huy"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:onClick="cancelCreate"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_TiepTuc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="openNextStep"
            android:text="@string/TiepTuc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txt_NguyenLieu_Create"
            app:layout_constraintStart_toStartOf="@+id/txt_NguyenLieu_Create" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/DoKho"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Obligatory"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/txt_Easy_Create"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/border_radius"
            android:gravity="center_vertical"
            android:onClick="doKho"
            android:text="@string/De"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/txt_Normal_Create" />

        <TextView
            android:id="@+id/txt_Normal_Create"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_radius"
            android:gravity="center_vertical"
            android:onClick="doKho"
            android:text="@string/TrungBinh"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/txt_Hard_Create"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/border_radius"
            android:gravity="center_vertical"
            android:onClick="doKho"
            android:text="@string/Kho"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_Normal_Create" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ThoiGianNau"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_Easy_Create"
            app:layout_constraintTop_toBottomOf="@+id/txt_Easy_Create" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Obligatory"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <EditText
            android:id="@+id/txt_ThoiGianNau_Create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_ThoiGianNau"
            android:inputType="textPersonName"
            android:textStyle="italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/txt_Hard_Create"
            app:layout_constraintStart_toEndOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/NguyenLieu"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Obligatory"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <EditText
            android:id="@+id/txt_NguyenLieu_Create"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Nhập vào nguyên liệu cần"
            android:inputType="textMultiLine"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/txt_ThoiGianNau_Create"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ic_Home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView23"
            app:layout_constraintEnd_toEndOf="@+id/textView23"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:srcCompat="@drawable/ic_baseline_home_40" />

        <ImageView
            android:id="@+id/ic_Search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:srcCompat="@drawable/ic_baseline_tim_kiem_40" />

        <ImageView
            android:id="@+id/ic_MonAn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_mon_an_40" />

        <ImageView
            android:id="@+id/ic_Create"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView26"
            app:layout_constraintEnd_toEndOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="@+id/textView26"
            app:srcCompat="@drawable/ic_baseline_tao_cong_thuc_active_40" />

        <ImageView
            android:id="@+id/ic_Account"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView27"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_tai_khoan_40" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nav_Home"
            android:textColor="@color/text_nomal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_TimKiem"
            android:textColor="@color/text_nomal"
            app:layout_constraintEnd_toStartOf="@+id/textView25"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_MonAn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_TaoCongThuc"
            android:textColor="@color/blue_primary_active"
            app:layout_constraintEnd_toStartOf="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/nav_taikhoan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView26" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>