<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_dangky">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/DangKy"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="Thông tin cá nhân"
        android:textAlignment="inherit"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txt_hovaten"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hovaten"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/txt_sdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/sdt"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txt_hovaten"
        app:layout_constraintStart_toStartOf="@+id/txt_hovaten"
        app:layout_constraintTop_toBottomOf="@+id/txt_hovaten" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txt_sdt"
        app:layout_constraintStart_toStartOf="@+id/txt_sdt"
        app:layout_constraintTop_toBottomOf="@+id/txt_sdt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Thông tin tài khoản"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_taikhoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nav_taikhoan"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txt_matkhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txt_taikhoan"
        app:layout_constraintStart_toStartOf="@+id/txt_taikhoan"
        app:layout_constraintTop_toBottomOf="@+id/txt_taikhoan" />

    <EditText
        android:id="@+id/txt_nhaplaimatkhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nhaplaimatkhau"
        android:inputType="textPassword"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/txt_matkhau"
        app:layout_constraintStart_toStartOf="@+id/txt_matkhau"
        app:layout_constraintTop_toBottomOf="@+id/txt_matkhau" />

    <Button
        android:id="@+id/btn_dangky"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Đăng Ký"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_nhaplaimatkhau"
        app:layout_constraintStart_toStartOf="@+id/txt_nhaplaimatkhau"
        app:layout_constraintTop_toBottomOf="@+id/txt_nhaplaimatkhau" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Đã có tài khoản ?"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/btn_dangky"
        app:layout_constraintTop_toBottomOf="@+id/btn_dangky" />

    <TextView
        android:id="@+id/txt_dangky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="SignIn"
        android:text="Đăng nhập"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>