<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaoCongThucActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue_primary_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/TaoCongThucMoi"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/pBar"
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_TiepTuc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="openNextStep"
            android:text="@string/TiepTuc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Obligatory"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/TenMonAn"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pBar" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Obligatory"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <EditText
            android:id="@+id/txt_TenMon_Create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Nhập vào Tên món ăn"
            android:inputType="textPersonName"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/AnhDaiDien"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_TenMon_Create"
            app:layout_constraintTop_toBottomOf="@+id/txt_TenMon_Create" />

        <ImageView
            android:id="@+id/img_AnhDaiDien"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_ChooseImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:srcCompat="@drawable/ic_baseline_add_image" />

        <Button
            android:id="@+id/btn_ChooseImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:onClick="chooseImage"
            android:text="Chọn ảnh"
            app:layout_constraintBottom_toTopOf="@+id/btn_TiepTuc"
            app:layout_constraintEnd_toEndOf="@+id/img_AnhDaiDien"
            app:layout_constraintStart_toStartOf="@+id/img_AnhDaiDien" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ic_Home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView23"
            app:layout_constraintEnd_toEndOf="@+id/textView23"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:srcCompat="@drawable/ic_baseline_home_40" />

        <ImageView
            android:id="@+id/ic_Search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:srcCompat="@drawable/ic_baseline_tim_kiem_40" />

        <ImageView
            android:id="@+id/ic_MonAn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_mon_an_40" />

        <ImageView
            android:id="@+id/ic_Create"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView26"
            app:layout_constraintEnd_toEndOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="@+id/textView26"
            app:srcCompat="@drawable/ic_baseline_tao_cong_thuc_active_40" />

        <ImageView
            android:id="@+id/ic_Account"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="itemNavClick"
            app:layout_constraintBottom_toTopOf="@+id/textView27"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:srcCompat="@drawable/ic_baseline_tai_khoan_40" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nav_Home"
            android:textColor="@color/text_nomal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_TimKiem"
            android:textColor="@color/text_nomal"
            app:layout_constraintEnd_toStartOf="@+id/textView25"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_MonAn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_TaoCongThuc"
            android:textColor="@color/blue_primary_active"
            app:layout_constraintEnd_toStartOf="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/nav_taikhoan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView26" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>